feat(plugin): продолжаю эксперименты

--- a/my-project/.eslintrc
+++ b/my-project/.eslintrc
@@ -1,27 +1,30 @@
 {
-  "parser": "babel-eslint",
-  "extends": "eslint:recommended",
-  "env": {
-    "commonjs": true,
-    "es6": true,
-    "node": true,
-    "browser": false
+  "env": { // где будет исполняться наш код
+      "browser": true,
+      "es2021": true 
   },
+  /* Пресет с настройками. prettier должен быть последним. 
+  Он удаляет некоторые правила eslint из-за которых могут возникать конфликты. */
+  "extends": [ 
+      "eslint:recommended",
+      "plugin:react/recommended",
+      "prettier"
+  ],
+  "parser": "babel-eslint", // Парсер для обработки jsx кода
   "parserOptions": {
-    "ecmaFeatures": {
-      "experimentalObjectRestSpread": true,
-      "jsx": false
-    },
-    "sourceType": "module"
+      "ecmaFeatures": {
+          "jsx": true
+      },
+      "ecmaVersion": 11, // версия стандарта JavaScript. Последний 12 (2021).
+      "sourceType": "module" // Позволяет использовать import/export
   },
-  "globals": {
-    "strapi": true
-  },
+  // Здесь мы подключаем используемые плагины.
+  "plugins": [
+      "react", 
+      "prettier"
+  ],
   "rules": {
-    "indent": ["error", 2, { "SwitchCase": 1 }],
-    "linebreak-style": ["error", "unix"],
-    "no-console": 0,
-    "quotes": ["error", "single"],
-    "semi": ["error", "always"]
+      "prettier/prettier": "error", // Обязательно!! Подсвечивает ошибки из Prettier.
+      "react/prop-types": 0 // Отключаем правило проверки передаваемых типов.
   }
 }
