--- a/my-project/src/plugins/tiptap-custom-field/package.json
+++ b/my-project/src/plugins/tiptap-custom-field/package.json
@@ -8,15 +8,29 @@
     "kind": "plugin"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "@strapi/helper-plugin": "^4.5.2",
     "@strapi/icons": "^1.3.1",
+    "@tiptap/extension-code-block": "^2.0.0-beta.204",
     "@tiptap/extension-code-block-lowlight": "^2.0.0-beta.204",
     "@tiptap/react": "^2.0.0-beta.204",
     "@tiptap/starter-kit": "^2.0.0-beta.204",
+    "hast-util-from-html": "^1.0.0",
     "highlight.js": "^11.7.0",
-    "lowlight": "^2.8.0"
+    "lowlight": "^2.8.0",
+    "prismjs": "^1.29.0",
+    "react-syntax-highlighter": "^15.5.0"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.44.0",
+    "@typescript-eslint/parser": "^5.44.0",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^8.28.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.31.11",
+    "prettier": "2.8.0",
     "typescript": "4.6.3"
   },
   "author": {
