--- a/my-project/package.json
+++ b/my-project/package.json
@@ -7,18 +7,15 @@
     "develop": "strapi develop",
     "start": "strapi start",
     "build": "strapi build",
-    "strapi": "strapi"
+    "strapi": "strapi",
+    "watch": "strapi watch-admin"
   },
   "dependencies": {
     "@strapi/plugin-i18n": "4.5.2",
     "@strapi/plugin-users-permissions": "4.5.2",
     "@strapi/strapi": "4.5.2",
-    "@tiptap/extension-document": "^2.0.0-beta.204",
-    "@tiptap/extension-paragraph": "^2.0.0-beta.204",
-    "@tiptap/extension-text": "^2.0.0-beta.204",
     "@types/material-ui": "^0.21.12",
-    "better-sqlite3": "^7.4.6",
-    "monaco-editor-webpack-plugin": "^7.0.1"
+    "better-sqlite3": "^7.4.6"
   },
   "author": {
     "name": "A Strapi developer"
