--- a/my-project/src/plugins/tiptap-custom-field/package.json
+++ b/my-project/src/plugins/tiptap-custom-field/package.json
@@ -14,13 +14,16 @@
     "@strapi/icons": "^1.3.1",
     "@tiptap/extension-code-block": "^2.0.0-beta.204",
     "@tiptap/extension-code-block-lowlight": "^2.0.0-beta.204",
+    "@tiptap/extension-document": "^2.0.0-beta.204",
+    "@tiptap/extension-paragraph": "^2.0.0-beta.204",
+    "@tiptap/extension-text": "^2.0.0-beta.204",
     "@tiptap/react": "^2.0.0-beta.204",
     "@tiptap/starter-kit": "^2.0.0-beta.204",
-    "hast-util-from-html": "^1.0.0",
     "highlight.js": "^11.7.0",
     "lowlight": "^2.8.0",
     "prismjs": "^1.29.0",
-    "react-syntax-highlighter": "^15.5.0"
+    "react-syntax-highlighter": "^15.5.0",
+    "tiptap-extension-code-block-prism": "^0.0.1-alpha"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.44.0",
