--- a/src/plugins/tiptap-custom-field/package.json
+++ b/src/plugins/tiptap-custom-field/package.json
@@ -13,17 +13,15 @@
     "@strapi/helper-plugin": "^4.5.2",
     "@strapi/icons": "^1.3.1",
     "@tiptap/extension-code-block": "^2.0.0-beta.204",
-    "@tiptap/extension-code-block-lowlight": "^2.0.0-beta.204",
     "@tiptap/extension-document": "^2.0.0-beta.204",
+    "@tiptap/extension-history": "^2.0.0-beta.204",
     "@tiptap/extension-paragraph": "^2.0.0-beta.204",
     "@tiptap/extension-text": "^2.0.0-beta.204",
     "@tiptap/react": "^2.0.0-beta.204",
     "@tiptap/starter-kit": "^2.0.0-beta.204",
-    "highlight.js": "^11.7.0",
-    "lowlight": "^2.8.0",
     "prismjs": "^1.29.0",
     "react-syntax-highlighter": "^15.5.0",
-    "tiptap-extension-code-block-prism": "^0.0.1-alpha"
+    "tiptap-extension-code-block-prism": "0.0.2-e"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.44.0",
