--- a/src/plugins/tiptap-custom-field/package.json
+++ b/src/plugins/tiptap-custom-field/package.json
@@ -12,16 +12,18 @@
     "@emotion/styled": "^11.10.5",
     "@strapi/helper-plugin": "^4.5.2",
     "@strapi/icons": "^1.3.1",
-    "@tiptap/extension-code-block": "^2.0.0-beta.204",
-    "@tiptap/extension-document": "^2.0.0-beta.204",
-    "@tiptap/extension-history": "^2.0.0-beta.204",
-    "@tiptap/extension-paragraph": "^2.0.0-beta.204",
-    "@tiptap/extension-text": "^2.0.0-beta.204",
-    "@tiptap/react": "^2.0.0-beta.204",
-    "@tiptap/starter-kit": "^2.0.0-beta.204",
+    "@tiptap/extension-code-block": "^2.0.0-beta.209",
+    "@tiptap/extension-collaboration": "^2.0.0-beta.209",
+    "@tiptap/extension-collaboration-cursor": "^2.0.0-beta.209",
+    "@tiptap/extension-document": "^2.0.0-beta.209",
+    "@tiptap/react": "^2.0.0-beta.209",
+    "@tiptap/starter-kit": "^2.0.0-beta.209",
     "prismjs": "^1.29.0",
     "react-syntax-highlighter": "^15.5.0",
-    "tiptap-extension-code-block-prism": "0.0.2-e"
+    "tiptap-extension-code-block-prism": "0.0.2-e",
+    "y-webrtc": "^10.2.3",
+    "y-websocket": "^1.4.5",
+    "yjs": "^13.5.44"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.44.0",
