--- a/src/plugins/tiptap-custom-field/package.json
+++ b/src/plugins/tiptap-custom-field/package.json
@@ -12,8 +12,11 @@
     "@emotion/styled": "^11.10.5",
     "@strapi/helper-plugin": "^4.5.2",
     "@strapi/icons": "^1.3.1",
+    "@tiptap/extension-bubble-menu": "^2.0.0-beta.209",
     "@tiptap/extension-code-block": "^2.0.0-beta.209",
     "@tiptap/extension-document": "^2.0.0-beta.209",
+    "@tiptap/extension-floating-menu": "^2.0.0-beta.209",
+    "@tiptap/extension-history": "^2.0.0-beta.209",
     "@tiptap/extension-paragraph": "^2.0.0-beta.209",
     "@tiptap/extension-text": "^2.0.0-beta.209",
     "@tiptap/react": "^2.0.0-beta.209",
